<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt1"
        android:textColor="#D11818"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mina"
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/mina" />

    <ImageView
        android:id="@+id/momo"
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/momo" />

    <ImageView
        android:id="@+id/sana"
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mina"
        app:srcCompat="@drawable/sana" />

    <ImageView
        android:id="@+id/tzuyu"
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="45dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/momo"
        app:srcCompat="@drawable/tzuyu" />

    <CheckBox
        android:id="@+id/ckb1"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/baloo"
        android:text="@string/ckb1"
        android:textColor="#097122"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mina" />

    <CheckBox
        android:id="@+id/ckb2"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/baloo"
        android:text="@string/ckb2"
        android:textColor="#097122"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tzuyu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/momo" />

    <CheckBox
        android:id="@+id/ckb3"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/baloo"
        android:text="@string/ckb3"
        android:textColor="#097122"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sana" />

    <CheckBox
        android:id="@+id/ckb4"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/baloo"
        android:text="@string/ckb4"
        android:textColor="#097122"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tzuyu" />

    <Button
        android:id="@+id/btn_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="15dp"
        android:onClick="btnOK"
        android:text="@string/sent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckb3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/like"
        android:textColor="#D11818"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sent" />

    <ImageView
        android:id="@+id/ans1"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/content_description"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/mina" />

    <ImageView
        android:id="@+id/ans2"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/content_description"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/ans1"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/momo" />

    <ImageView
        android:id="@+id/ans3"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/content_description"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/ans2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/sana" />

    <ImageView
        android:id="@+id/ans4"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/content_description"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/ans3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/tzuyu" />

</androidx.constraintlayout.widget.ConstraintLayout>